--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "core-js": "^2.5.7",
+    "idb": "^2.1.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   }
