--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "core-js": "^2.5.7",
     "idb": "^2.1.3",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1"
   }
 }
